2004-01-15  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-base.c:
	- Relative path handling broke absolute-sans-scheme path handling.
	  Now fixed.

	* src/yelp-db-pager.c:
	- Handle XInclude.

	* src/yelp-toc-pager.c:
	- The parser context seems to fail on all files after a single bad XML
	  file, which I think is a bug in libxml2.  This caused a single bad
	  OMF file to bomb the whole TOC.  I've worked around the problem for
	  now by creating a new parser context after errors.

2004-01-14  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-base.c:
	- Don't require absolute path for a file given on the command line.

	* test/testdoc1/testdoc1.xml:
	- That really isn't my email address.  Really.

2004-01-12  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Changed Previous and Next to Previous Page and Next Page, per UI review.

2004-01-12  Richard Hult  <richard@imendio.com>

	* src/yelp-toc-pager.c (menu_write_page): Set encoding to utf-8 in
	the generated html. Fixes bug #131186.

2004-01-11  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	* src/test-pager.c:
	* src/yelp-db-pager.c:
	* src/yelp-io-channel.c:
	* src/yelp-man-pager.c:
	* src/yelp-man-pager.h:
	* src/yelp-uri.c:
	* src/yelp-window.c:
	* stylesheets/Makefile.am:
	- Oh man(1), this is the start of a beautiful relationship.

2004-01-11  Shaun McCance  <shaunm@gnome.org>

	* src/test-pager.c:
	* src/yelp-base.c:
	* src/yelp-db-pager.c:
	* src/yelp-db-pager.h:
	* src/yelp-history.c:
	* src/yelp-history.h:
	* src/yelp-html-gtkhtml2.c:
	* src/yelp-html.h:
	* src/yelp-pager.c:
	* src/yelp-pager.h:
	* src/yelp-toc-pager.c:
	* src/yelp-uri.c:
	* src/yelp-uri.h:
	* src/yelp-window.c:
	* src/yelp-window.h:
	- ... in which I change YelpURI around.  Again.

2004-01-10  Shaun McCance  <shaunm@gnome.org>

	* src/.cvsignore: Added test-man-parser to .cvsignore

	* src/Makefile.am:
	* src/yelp-error.c:
	* src/yelp-error.h:
	* src/yelp-io-channel.c:
	* src/yelp-io-channel.h: