@@ -1,3 +1,8 @@
+2004-01-16  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-toc-pager.c:
+	- Updated comment about bug #131745, now that I've filed the bug.
+
 2004-01-15  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-base.c:
